# 159_709ComputerGraphics

./: README.md
159731/example01/: CMakeCache.txt  CMakeLists.txt  Makefile  OpenGL  cmake_install.cmake  example01.cpp  makefile-mac  makefile-ubuntu  makefile-win10  opengl_start_03.cbp
159731/example02/: example02  example02.cpp  frag.glsl  makefile  makefile-project  makefile-win10  vert.glsl
159731/example03/: example03  example03.cpp  makefile-project  makefile-ubuntu  vert.glsl
159731/example04/src/: example04.cpp
159731/example05/shader/: vert.glsl
159731/example05/src/: example05.cpp
SL/: opengl_learning的替身  opengl_wanlin405的替身
assignment1/TaoJiang(Tommy)20004769/: CMakeLists.txt
assignment1/project01/: CMakeLists.txt  makefile-ubuntu
assignment1/project01/src/: main.cpp
assignment2/: README.md
assignment2/demo/example06/: CMakeLists.txt
assignment2/demo/example06 2/: README.md
assignment2/demo/example07/: CMakeLists.txt
assignment2/demo/example08/: example08
assignment2/demo/example08-9dan/: CMakeLists.txt
assignment2/demo/project02/: CMakeLists.txt  makefile-mac
assignment2/demo/task04-sphere/: CMakeCache.txt  CMakeLists.txt  Makefile  Task-sphere  Task-sphere.cbp  cmake_install.cmake  project02.cbp
assignment2/fuck/example07/: CMakeLists.txt  makefile-ubuntu  makefile-win10
assignment2/fuck/example08/: CMakeLists.txt
assignment2/project02/shader/: frag.glsl  lamp.frag.glsl  skybox.vert.glsl
assignment2/project02/src/: main.cpp
assignment2/project02_ optimize_backup/shader/: frag.glsl
assignment2/project02的副本/: CMakeLists.txt
assignment2/testing/: 太阳系.rar
assignment2/testing/ConformalGeometricAlgebra_OpenGL3_SolarSystem-master/SolarSystem/: CMakeLists.txt
assignment2/testing/ConformalGeometricAlgebra_OpenGL3_SolarSystem-master/SolarSystem/Rapport/: .~lock.RapportFinal.pdf.odt#
assignment2/testing/ConformalGeometricAlgebra_OpenGL3_SolarSystem-master/SolarSystem/assets/: CMakeLists.txt
assignment2/testing/ConformalGeometricAlgebra_OpenGL3_SolarSystem-master/SolarSystem/include/application/: Planete.hpp  SkyBox.hpp  Texture.hpp  Versor.hpp
assignment2/testing/ConformalGeometricAlgebra_OpenGL3_SolarSystem-master/SolarSystem/include/c3ga/: c3gaTools.hpp
assignment2/testing/ConformalGeometricAlgebra_OpenGL3_SolarSystem-master/SolarSystem/include/glimac/: FreeFlyCamera.hpp  Image.hpp  Sphere.hpp  common.hpp
assignment2/testing/ConformalGeometricAlgebra_OpenGL3_SolarSystem-master/SolarSystem/libs/include/glm/: fwd.hpp
assignment2/testing/ConformalGeometricAlgebra_OpenGL3_SolarSystem-master/SolarSystem/shaders/: 3D.vs.glsl
assignment2/testing/ConformalGeometricAlgebra_OpenGL3_SolarSystem-master/SolarSystem/source/: myProgram.cpp
assignment2/testing/ConformalGeometricAlgebra_OpenGL3_SolarSystem-master/SolarSystem/source/application/: Planete.cpp  SkyBox.cpp
assignment2/testing/ConformalGeometricAlgebra_OpenGL3_SolarSystem-master/SolarSystem/source/glimac/: Cube.cpp  FreeFlyCamera.cpp  SDLWindowManager.cpp  Sphere.cpp
assignment3/: README.md  minobj.html
assignment3/assimp_木头老头/: CMakeLists.txt
assignment3/assimp_木头老头/include/: Mesh.h  Model.h  Shade.h
assignment3/assimp_木头老头/shader/: frag.glsl  vert.glsl
assignment3/assimp_木头老头/src/: Mesh.cpp  Model.cpp  image.cpp  main.cpp
assignment3/demo-self-for-p3/: .gitignore  CMakeLists.txt
assignment3/example08-地球+光照/: CMakeLists.txt
assignment3/example08-胶囊+光照/: CMakeLists.txt
assignment3/example14-demo/: makefile-mac  makefile-ubuntu  makefile-win10
assignment3/project03/: CMakeLists.txt  makefile-ubuntu
assignment3/test-basic/: CMakeLists.txt
demo-self-for-p3/: CMakeLists.txt
demo-self-for-p3/include/: LightDirectional.h  Mesh.h  Model.h
demo-self-for-p3/shader/: frag.glsl  lamp.frag.glsl
demo-self-for-p3/src/: Mesh.cpp  Model.cpp  Shade.cpp  main.cpp
demo-self/include/: LightSpot.h
demo-self/src/: main.cpp
slef-backup/demo-self(平行光)/: CMakeLists.txt
slef-backup/demo-self(点光)的副本/: CMakeLists.txt
slef-backup/demo-self(箱子+光照)/: CMakeLists.txt
slef-backup/demo-self(箱子+光照)/shader/: frag.glsl  vert.glsl
slef-backup/demo-self(箱子+光照)/src/: main.cpp
slef-backup/demo-self-两球-点光-done/: CMakeLists.txt
slef-backup/demo-self-多光源-done/: CMakeLists.txt
week02/ demo/: CMakeLists.txt  demo.cpp  example02  example02.cpp  example03  example03.cpp  makefile  vert.glsl
week02/ demo/shaders/: frag.glsl  vert.glsl
week02/ demo/shaders-03/: vert.glsl
week02/demo/: CMakeCache.txt  CMakeLists.txt  Makefile  OpenGL  cmake_install.cmake  example02  example02.cpp  example03  example03.cpp  makefile-03  opengl_start_03.cbp
week02/example02/: example02.cpp  frag.glsl  makefile-ubuntu
week02/example03/: frag.glsl  makefile-win10
week03/demo/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  demo.cbp
week03/demo/demo_Debug/: demo  shaders
week03/demo/include/: vmath.h
week03/demo/shaders/: frag.glsl  vert.glsl
week03/demo/src/: main.cpp  source.cpp  source1.cpp  source2.cpp  source3.cpp  source4-4.cpp  source4.cpp  source5.cpp  source6.cpp  source7.cpp  source8.cpp
week03/example04/: CMakeLists.txt  __CMakeLists.txt  makefile-win10
week03/example05/: CMakeLists.txt  makefile-mac  makefile-ubuntu
week04/example06/: CMakeLists.txt  makefile-mac  makefile-ubuntu  makefile-win10
week04/example06 2/: CMakeLists.txt  example06
week04/example07/: makefile-mac
week05/example08/: CMakeLists.txt
week05/example08-9球-点光/: CMakeLists.txt
week05/example08-红蛋/: example08
week06/Example 09 - Normal MappingFile/: makefile-ubuntu  makefile-win10
week06/example09/: CMakeLists.txt  example09  makefile-mac
week06/example10/: makefile-mac  makefile-ubuntu  makefile-win10
week07/example11/: makefile-mac  makefile-win10
week07/example11 2/: CMakeLists.txt  makefile-ubuntu
week07/example12/: CMakeLists.txt  makefile-mac  makefile-ubuntu  makefile-win10
week08/example13/: CMakeLists.txt  makefile-mac  makefile-ubuntu  makefile-win10
week08/example15/: makefile-mac  makefile-ubuntu  makefile-win10
(+583 files in other folders)
